--- a/Project Contact us.html
+++ b/Project Contact us.html
@@ -80,8 +80,8 @@
             
         <p>If you have any questions or inquiries, please use the contact form below or reach out to us through the provided contact information.</p>
         <p>Name: Ayman Sanusi<p>
-        <p>Email: ayman7415@bazeuniversity.edu.ng<p>
-        <p>For Further enquires call: 07011446460<p>
+        <p>Email: jabir8905@bazeuniversity.edu.ng<p>
+        <p>For Further enquires call: 09027777078<p>
 
         </div>
         
