Update Project Contact us.html

--- a/Project Contact us.html
+++ b/Project Contact us.html
@@ -79,7 +79,7 @@
         <div class="contact">
             
         <p>If you have any questions or inquiries, please use the contact form below or reach out to us through the provided contact information.</p>
-        <p>Name: Ayman Sanusi<p>
+        <p>Name: Jabir Rikiji Sanusi<p>
         <p>Email: jabir8905@bazeuniversity.edu.ng<p>
         <p>For Further enquires call: 09027777078<p>
 
